k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-app

spec:
  replicas: 4

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: nagp-app

  template:
    metadata:
      labels:
        app: nagp-app
        version: "v1"

    spec:
      containers:
        - name: nagp-app
          image: gdave940/nagp-kubernetes:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
