k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-app-service

spec:
  selector:
    app: nagp-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
